@@ -1,0 +1,76 @@
+<html>
+<body onload="test()">
+<div id="result">
+<p>
+This tests that the chromium.Interval functionality works correctly.
+</p>
+</div>
+<script>
+if (window.layoutTestController) {
+  layoutTestController.dumpAsText();
+}
+
+var resultDiv = document.getElementById("result");
+
+function check(name, passed, debug_output) {
+  if (passed) {
+    resultDiv.innerHTML += "PASS - " + name + "<br>";
+  } else {
+    resultDiv.innerHTML += "FAIL - " + name + ", debug_output: " + debug_output + "<br>";
+  }
+}
+
+// Spin loop for a short time
+function pause(millisecs) {
+  var start = new Date();
+  while ((new Date() - start) < millisecs);
+}
+
+
+function test() {
+  var interval = new chromium.Interval();
+
+  // Verify initialization.
+  var ms = interval.microseconds();
+  check("initial zero", ms == 0, "[ms: " + ms + "]");
+
+  // Verify that starting the timer works.
+  interval.start();
+  pause(50);
+  ms = interval.microseconds();
+  // Due to clock skew and granularity, we see sporadic failures if we check for
+  // ms >= 50000, so add a bit of buffer.
+  check("start", ms >= 49000, "[ms: " + ms + "]");
+
+  // Verify that restarting the interval should reset the beginning time
+  interval.start();
+  pause(1);
+  ms = interval.microseconds();
+  check("restart", ms > 0 && ms < 50000, "[ms: " + ms + "]");
+
+  // Verify that calling stop() before start() has no effect.
+  var interval = new chromium.Interval();
+  interval.stop();
+  ms = interval.microseconds();
+  check("initial stop", ms == 0, "[ms: " + ms + "]");
+
+  // Verify a start/stop sequence.
+  interval.start();
+  pause(50);
+  interval.stop();
+  ms = interval.microseconds();
+  check("stop", ms > 0 && ms < 100000, "[ms: " + ms + "]");
+
+  // Verify that the timer is really stopped.
+  var ms2 = interval.microseconds();
+  check("stopped", ms == ms2, "[ms: " + ms + "]" + "[ms2: " + ms2 + "]");
+
+  // Verify that re-stopping the timer works.
+  pause(50);
+  interval.stop();
+  ms2 = interval.microseconds();
+  check("re-stopped", ms2 > ms, "[ms: " + ms + "]" + "[ms2: " + ms2 + "]");
+}
+</script>
+</body>
+</html>
